// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Marger /> by default renders a <div /> that wraps its children 1`] = `
<div
  className=""
>
  Curioser and curioser
</div>
`;

exports[`<Marger /> with bottom prop with object prop has margin-bottom CSS rule 1`] = `
.c0 {
  margin-bottom: 2.5rem;
}

@media (min-width:480px) {
  .c0 {
    margin-bottom: 7.5rem;
  }
}

@media (min-width:768px) {
  .c0 {
    margin-bottom: 1.25rem;
  }
}

<div
  className="c0"
/>
`;

exports[`<Marger /> with bottom prop with object with \`fromXxs\` prop has default margin-bottom CSS rule 1`] = `
.c0 {
  margin-bottom: 2.5rem;
}

<div
  className="c0"
/>
`;

exports[`<Marger /> with bottom prop with object with \`fromXxs\` prop is overrided by the default value 1`] = `
.c0 {
  margin-bottom: 7.5rem;
}

<div
  className="c0"
/>
`;

exports[`<Marger /> with bottom prop with string prop has margin-bottom CSS rule 1`] = `
.c0 {
  margin-bottom: 0.9375rem;
}

<div
  className="c0"
/>
`;

exports[`<Marger /> with bottom prop with string prop works with .5 value 1`] = `
.c0 {
  margin-bottom: 0.3125rem;
}

<div
  className="c0"
/>
`;

exports[`<Marger /> with fromS to \`0\` and default value has margin-bottom to \`0\` for S media-query 1`] = `
.c0 {
  margin-bottom: 2.5rem;
}

@media (min-width:640px) {
  .c0 {
    margin-bottom: 0rem;
  }
}

<div
  className="c0"
/>
`;

exports[`<Marger /> with other styles has a custom style 1`] = `
.c0 {
  background-color: red;
}

@media (min-width:480px) {
  .c0 {
    margin-top: 7.5rem;
  }
}

@media (min-width:480px) {
  .c0 {
    margin-bottom: 7.5rem;
  }
}

@media (min-width:768px) {
  .c0 {
    margin-top: 1.25rem;
  }
}

@media (min-width:768px) {
  .c0 {
    margin-bottom: 1.25rem;
  }
}

<div
  className="c0"
/>
`;

exports[`<Marger /> with top prop with object prop has margin-top CSS rule 1`] = `
.c0 {
  margin-top: 2.5rem;
}

@media (min-width:480px) {
  .c0 {
    margin-top: 7.5rem;
  }
}

@media (min-width:768px) {
  .c0 {
    margin-top: 1.25rem;
  }
}

<div
  className="c0"
/>
`;

exports[`<Marger /> with top prop with object with \`fromXxs\` prop has default margin-top CSS rule 1`] = `
.c0 {
  margin-top: 2.5rem;
}

<div
  className="c0"
/>
`;

exports[`<Marger /> with top prop with object with \`fromXxs\` prop is overrided by the default value 1`] = `
.c0 {
  margin-top: 7.5rem;
}

<div
  className="c0"
/>
`;

exports[`<Marger /> with top prop with string prop has margin-top CSS rule 1`] = `
.c0 {
  margin-top: 0.9375rem;
}

<div
  className="c0"
/>
`;

exports[`<Marger /> with top prop with string prop works with .5 value 1`] = `
.c0 {
  margin-top: 0.3125rem;
}

<div
  className="c0"
/>
`;
